--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ header h2 {
 
 .container-input {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	margin-top: 5%;
 	
 }
